fixed overflow issue

--- a/slider.css
+++ b/slider.css
@@ -1,5 +1,4 @@
 body {
-    width: 100%;
     font-family: sans-serif;
     font-size: 14px;
 }
@@ -30,6 +29,19 @@ button {
 button:hover {
     cursor:pointer;
 }
+
+.slider-wrapper{
+    border:1px solid green;
+    padding:20px;
+    max-width: 100%;
+}
+
+.awo-reviews-track {
+    position: relative;
+    width: 100%;
+    height:100%;
+    overflow: hidden;
+}
   
 .awo-reviews-slider {
     width:300px;
@@ -45,7 +57,7 @@ button:hover {
 @media (max-width:500px){
     .awo-reviews-slider {
         margin:auto;
-}
+ }
 }
   
   
